# Anthropic-Hackathon

./: .env.example  .gitignore  README.md  dmt_ex_q1.md  dmt_ex_q2.md  pyproject.toml  qa_ex_question.md  vercel.json
ezautograde-front/ez-grade/: package-lock.json  package.json
ezautograde-front/ez-grade/src/: App.js
ezautograde-front/ez-grade/src/components/: autograder.jsx
scripts/: run.sh
src/: app.py  app_config.py  ui.py
src/data/chroma_dmt_2/: chroma.sqlite3
src/data/chroma_dmt_2/9d7056f9-8277-425c-90c2-76d8e5afa962/: index_metadata.pickle
src/data/chroma_qa/: chroma.sqlite3
src/service/: llm_client.py  prompt.xml  rag.py
