[tool.poetry]
name = "ops-insight-api-service"
version = "1.0.1"
description = "ops copilot api"
authors = ["Pranav Kapur <pranav.kapur@wexinc.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
openai = "1.95.0"
anthropic = "0.73.0"
pydantic = "2.9.0"
httpx = "0.27.2"
aiohttp = "^3.12.13"
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
litellm = "^1.75.0"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "opscopilot-insight"
[project.urls]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests"
]