[tool.poetry]
name = "grader-api"
version = "1.0.1"
description = "ez grader"
authors = ["Pranav Kapur <pranav.kapur@wexinc.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.0"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
anthropic = "0.73.0"
pydantic = "2.9.0"
httpx = "0.27.2"
aiohttp = "^3.12.13"
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
litellm = "^1.75.0"
python-multipart = "^0.0.6"
langchain = "1.0.7"
chromadb = "1.3.4"
pypdf = "6.2.0"
voyageai = "^0.3.5"
langchain-chroma = ">=0.1.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "grader"
[project.urls]
